--- a/templates/bot_v3.html
+++ b/templates/bot_v3.html
@@ -33,6 +33,7 @@
 
 <div style= "max-height:90%;position:sticky; top: 50px; bottom: 3000; left:400px;  width:500px;"
     >
+
 <p>◎ 자동 추천목록◎</p>
     <div id="top10">
 {% autoescape false %}
@@ -55,7 +56,10 @@
 {% autoescape false %}
      {{ vec }}
  {% endautoescape %}
+
         </div>
+    <br>
+    <span>연산시간 : <span id="time0">0</span> 초  (750개 연산)</span>
     </div>
 
 
