--- a/templates/bot_v3.html
+++ b/templates/bot_v3.html
@@ -33,7 +33,8 @@
 
 <div style= "max-height:90%;position:sticky; top: 50px; bottom: 3000; left:400px;  width:500px;"
     >
-
+<!--<div style="max-height:90%; overflow:scroll; overflow-y:auto;overflow-x:auto; position:sticky; top: 50px; bottom: 3000; left:400px; padding-right:50px; width:500px; word-wrap:break-word"-->
+<!--    >-->
 <p>◎ 자동 추천목록◎</p>
     <div id="top10">
 {% autoescape false %}
@@ -64,7 +65,7 @@
 
 
 
-<table style="margin-top:-400px; width:300px; font-size:10pt;border:1px solid #7f7f7f;" border="1" cellspacing="0" cellpadding="1"
+<table style="margin-top:-500px; width:300px; font-size:10pt;border:1px solid #7f7f7f;" border="1" cellspacing="0" cellpadding="1"
     data-mce-style="font-size: 10pt; border: 1px solid #7f7f7f;">
     <tr id='avoid'>
     <th>
